--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "voicestudio",
+  "name": "voice-pro",
   "version": "1.0.0",
-  "description": "AI Voice Studio Pro",
+  "description": "Voice Pro - AI Text-to-Speech Studio",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
+  "keywords": ["tts", "voice", "ai", "speech"],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "axios": "^1.6.0",
-    "path": "^0.12.7"
+    "axios": "^1.6.0"
   }
 }
