--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
-  "name": "voice-pro",
+  "name": "voice-pro-app",
   "version": "1.0.0",
-  "description": "Voice Pro - AI Text-to-Speech Studio",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
-  "keywords": ["tts", "voice", "ai", "speech"],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
-    "axios": "^1.6.0"
+    "express": "^4.18.2"
   }
 }
